# webapp-agents-template

./: .gitignore  CLAUDE.md  config.yml  package.json  settings.json
.claude/subagents/: architect.md  backend.md  frontend.md  reviewer.md  tester.md
.github/workflows/: ci.yml
apps/backend/: .gitignore  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
apps/backend/app/: config.py  main.py
apps/backend/app/connections/: __init__.py
apps/backend/app/routers/: health.py
apps/backend/tests/: conftest.py
apps/backend/tests/test_routers/: test_health.py
apps/web/: .gitignore  index.html  package.json  playwright.config.ts  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/__tests__/: App.test.tsx
apps/web/src/types/: api.ts
